examples/invalid_feature_secret/missing_secret_handle.argx
module invalid.missing_secret_handle
provider OpenAI { kind external enabled false dry_run_only true requires feature_flag requires approval }
secret S { provider OpenAI scope adapter access denied source none }
